--- a/Nextjs/React refresher/package.json
+++ b/Nextjs/React refresher/package.json
@@ -8,10 +8,10 @@
     "@testing-library/user-event": "^12.7.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.1.0"
   },
-  
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
